# netExpert

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  graph.ipynb  graph.py  llm.py  ollama.Dockerfile  prepare_db.py  pyproject.toml  requirements.txt  run-ollama.sh  streamlit.py
data/WiFi 7/: ProductFinder_Results_2024-11-26.csv
