[tool.poetry]
name = "netexpert"
version = "0.1.0"
description = ""
authors = ["Kiran Kumar HK <kiranhk98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
streamlit = "^1.41.1"
langchain = "^0.3.12"
langchain-ollama = "^0.2.1"
langgraph = "^0.2.59"
langchain-community = "^0.3.11"
chromadb = "^0.5.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
